# ks2

./: CMakeLists.txt
include/: board_file.hpp  board_file_manager.hpp  compile_worker.hpp  kovan_button_provider.hpp  kovan_kmod_sim.hpp  kovan_protocol_p.hpp  kovan_regs_p.hpp  kovan_spiral-inl.hpp  light.hpp  main_window.hpp  port_configuration.hpp  robot.hpp  server_thread.hpp  simulator.hpp
rc/: 2013.board  platform.hints
spirals/: kovan_spiral.m
src/: board_file.cpp  board_file_manager.cpp  board_selector_dialog.cpp  compile_worker.cpp  heartbeat.cpp  kovan_button_provider.cpp  kovan_kmod_sim.cpp  light.cpp  main.cpp  main_window.cpp  port_configuration.cpp  ports_widget.cpp  robot.cpp  server_thread.cpp  touch_dial.cpp
ui/: board_selector_dialog.ui  main_window.ui  port_configuration.ui
